<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context="com.example.lucas_vieira.knowqui.view.CadastroFragment">

    <TextView
        android:id="@+id/textoDadosCadastraisId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dados_cadastrais_textview_cadastro_fragment"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNomeId"
            android:hint="@string/nome_hint_edittext_cadastro_fragment"/>

    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextIdadeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idade_hint_edittext_cadastro_fragment"/>
    </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/textoRedeDeEnsinoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rede_de_ensino_textview_cadastro_fragment"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxPublicoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publico_checkbox_cadastro_fragment" />

        <CheckBox
            android:id="@+id/checkBoxPrivadoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/privado_chackbox_cadastro_fragment" />

    </LinearLayout>



        <TextView
            android:id="@+id/textoEscolaridadeid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escolaridade_textview__cadastro_fragment"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerEscolaridadeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textoSexoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo_textview_cadastro_fragment"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/botaoSexoFemininoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icone_feminino"
            />

        <ImageView
            android:id="@+id/botaoSexoMasculinoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/botaoSexoFemininoId"
            android:background="@drawable/icone_masculino"
            android:paddingStart="20dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/botaoSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/background_light"
        android:text="@string/salvar_button_cadastro_fragment" />


</LinearLayout>

